--- a/carmanager/src/main/webapp/css/join.css
+++ b/carmanager/src/main/webapp/css/join.css
@@ -57,8 +57,9 @@ body {
   top: 25%;
   right: 5%;
   z-index:2;
-  background-color: black;
-  opacity: 0.7;
+  background-color: RGB(25, 25, 25);
+  border-radius: 8px 8px 8px 8px;
+  opacity: 0.9;
   float: right;
 }
 
