--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -9,32 +9,29 @@ body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  overflow: hidden;
-  /*font-family: helvetica;
-  font-weight: 100;*/
+}
+
+.container {
+  position: relative;
+  height: 100%;
+  left: 0;
 }
 
 
-h1, h2, h3, p {
-  margin: 0;
-  padding: 0;
+/* 메뉴 바 */
+.open-sidebar 
+{ 
+  left: 240px; 
 }
 
-.menubar {
-    float: left;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 11;
-    width: 0px;
-    height: 100%;
-    border-right: 1px solid rgb(223, 223, 223);
-}
-
-.view {
-    position: page;
-    height: 100%;
-    min-height: 650px;
+.swipe-area {
+  position: absolute;
+  width: 50px;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background: #f3f3f3;
+  z-index: 0;
 }
 
 /* 로고 관련 */
@@ -48,7 +45,6 @@ h1, h2, h3, p {
   text-align: left; 
   display: table-cell;
   vertical-align: middle;
-
 }
 
 .logo {
@@ -57,24 +53,25 @@ h1, h2, h3, p {
   color: black; 
 }
 
-/* 메뉴 바 */
-.container {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  left: 0;
+/* 메뉴 아이콘 설정 */
+.menu_icon {
+  height: 20px;    
 }
 
-.container.open-sidebar { left: 240px; }
+/* copyright 부분  */
+.footerwrapper {
+  height: 10%;
+  width: 100%;
+  display: table;
+}
 
-.swipe-area {
-  position: absolute;
-  width: 50px;
-  left: 0;
-  top: 0;
-  height: 100%;
-  background: #f3f3f3;
-  z-index: 0;
+
+.footerview {
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  font-size: 12px;
+  font-weight: lighter;
 }
 
 #sidebar {
@@ -106,20 +103,14 @@ h1, h2, h3, p {
 
 #sidebar ul li:hover a { background: #C9223D; }
 
-
-/*메뉴 버튼 관련 */
+/*메뉴 버튼 관련 작업 */
 .main-content {
-  /*position: absolute;*/
-  /*left: 30px;
-  top: 30px;*/
-  /*margin: 0px; */
-    
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  left: 10px;
+  top: 10px;
   padding: 10px;
-  box-sizing: border-box;
-  position: relative;
 }
+
 .main-content #sidebar-toggle {
   background: #DF314D;
   border-radius: 3px;
@@ -137,73 +128,13 @@ h1, h2, h3, p {
   border-radius: 1px;
 }
 
-/*.menuwrapper {
-  height: 62%;    
-  width: 100%;*/
-  /*display: table;*/
-/*}
-
-.menuview {
-  text-align: left;*/
-  /*display: table-cell;
-  vertical-align: middle;*/
-/*}
-
-.menuview li {
-  margin-left: 0;
-  padding: 0;
-  list-style: none;
+/* 메인 표출 정보를 보여주는 view 부분 start */
+.view {
+  position: page;
+  height: 100%;
+  min-height: 650px;
 }
 
-.menuview ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.menuview a {*/
-  /*border-bottom: 1px solid darkgray;*/
-  /*color: black;*/
-  /*color: slategray;*/
-  /*display: block;
-  padding: 13px 18px;
-  text-decoration: none;*/
-  /*font-family: 'Jeju Gothic', sans-serif;*/
-/*}*/
-
-/*.menuview a:hover {
-  background: darkred;*/
-  /*background: rgb(45, 57, 90);*/
-  /*background: rgb(55, 55, 55);  */
-  /*background: rgb(92, 178, 171);*/
-  /*color: whitesmoke;
-}*/
-
-/* 메뉴 아이콘 설정 */
-.menu_icon {
-  height: 20px;    
-}
-
-/* copyright 부분  */
-.footerwrapper {
-  height: 10%;
-  width: 100%;
-  display: table;
-}
-
-.footerview {
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
-  font-size: 12px;
-  font-weight: lighter;
-}
-
-
-
-
-
-/* 4가지 차트 view 부분 */
 .selectcar {
     /*border: 1px solid red;*/
     position: absolute;
@@ -286,4 +217,9 @@ h1, h2, h3, p {
     top: 900px;
     left: 280px;
 }
-/* view 부분 끝 */
+/* 메인 표출 정보를 보여주는 view 부분 end */
+
+/*h1, h2, h3, p {
+  margin: 0;
+  padding: 0;
+}*/
