--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -146,7 +146,7 @@ body {
 }
 
 .carbox {
-    width: 1250px;
+    width: 1024px;
     height: 60px;
     border-bottom: 1px solid rgb(223, 223, 223);
 }
@@ -160,7 +160,7 @@ body {
   border-right: 1px solid rgb(223, 223, 223);
   position: absolute;
   top: 230px;
-  left: 280px;
+  left: 40px;
   margin: 0px;
   padding: 0px;
 }
@@ -168,18 +168,21 @@ body {
 .effi {
     /*border: 1px solid red;*/
     border-bottom: 1px solid rgb(223, 223, 223);
+    /*border-left: 1px solid rgb(223, 223, 223);*/
     position: absolute;
     top: 230px;
     width: 450px;
     
-    left: 800px;
+    left: 580px;
 }
+
+
 
 .viewintitle {
     /*border: 1px solid red;*/
     position: absolute;
-    top: 560px;
-    left: 280px; 
+    top: 635px;
+    left: 40px; 
     z-index: 10;
 }
 
@@ -196,8 +199,8 @@ body {
     /*border: 1px solid red;*/
     border-right: 1px solid rgb(223, 223, 223);
     position: absolute;
-    top: 560px;
-    left: 280px;
+    top: 640px;
+    left: 40px;
     width: 494px;      
 }
 
@@ -205,17 +208,17 @@ body {
     /*border: 1px solid red;*/
     border-bottom: 1px solid rgb(223, 223, 223);
     position: absolute;
-    top: 560px;
+    top: 620px;
     max-width: 450px;
-    left: 800px;
+    left: 580px;
 }
 
 
 .carcondition {
     border: 1px solid red;
     position: absolute;
-    top: 900px;
-    left: 280px;
+    top: 996px;
+    left: 40px;
 }
 /* 메인 표출 정보를 보여주는 view 부분 end */
 
