--- a/carmanager/src/main/webapp/css/main.css
+++ b/carmanager/src/main/webapp/css/main.css
@@ -18,6 +18,11 @@ body {
 }
 
 /* 메뉴 바 */
+.menubarview {
+  height: 60%;
+  overflow: hidden;     
+}
+
 .open-sidebar 
 { 
   left: 240px; 
@@ -25,11 +30,12 @@ body {
 
 #sidebar {
   background: #DF314D;
+  /*position: absolute;*/
   position: absolute;
   width: 240px;
   height: 100%;
   left: -240px;
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
 }
 
 #sidebar ul {
@@ -99,15 +105,35 @@ body {
   padding: 10px;
 }
 
-.main-content #sidebar-toggle {
+/*
+#sidebar-toggle {
   background: #DF314D;
   border-radius: 3px;
   display: block;
   position: relative;
   padding: 10px 7px;
   float: left;
-}
-.main-content #sidebar-toggle .bar {
+}*/
+
+/*.main-content {
+  background: #DF314D;
+  border-radius: 3px;
+  display: block;
+  position: relative;
+  padding: 10px 7px;
+  float: left;
+}*/
+
+/*.main-content {
+  display: block;
+  width: 18px;
+  margin-bottom: 3px;
+  height: 2px;
+  background-color: #fff;
+  border-radius: 1px;
+}*/
+
+#sidebar-toggle .bar {
   display: block;
   width: 18px;
   margin-bottom: 3px;
