--- a/carmanager/src/main/webapp/css/auth/login.css
+++ b/carmanager/src/main/webapp/css/auth/login.css
@@ -28,6 +28,8 @@ body {
 	width: 100%; 
 	height: 100%; 
 	background-size:cover;
+	min-width: 1024px;	
+	min-height: 768px;
 }
 /* BODY속 container 끝 */
 
