--- a/carmanager/src/main/webapp/css/auth/login.css
+++ b/carmanager/src/main/webapp/css/auth/login.css
@@ -20,6 +20,7 @@ body {
   padding: 0px;
   width: 100%;
   height: 100%;
+  min-width: 1024px;
 }
 #gallery{
 		z-index:1;
@@ -80,7 +81,7 @@ body {
     right: 8%;
  		z-index: 4;
     float: left;
-
+    
     /* Font styles */
     font-family: 'Raleway', 'Lato', Arial, sans-serif;
     color: white;
