로그아웃 버튼 추가

--- a/carmanager/src/main/webapp/css/main/main.css
+++ b/carmanager/src/main/webapp/css/main/main.css
@@ -162,6 +162,12 @@ body {
     margin: 0px;    
 }
 
+.logout {
+    position: absolute;
+    top: 160px;
+    left: 150px;
+}
+
 .carbox {
     width: 1024px;
     height: 60px;
