--- a/carmanager/src/main/webapp/css/main/main.css
+++ b/carmanager/src/main/webapp/css/main/main.css
@@ -152,15 +152,6 @@ body {
   min-height: 650px;
 }
 
-.selectcar {
-    /*border: 1px solid red;*/
-    position: absolute;
-    
-    /*float: left;*/
-    left: 40px;
-    top: 150px;
-    margin: 0px;    
-}
 
 .logout {
     position: absolute;
@@ -175,7 +166,14 @@ body {
 }
 
 #select_container{
-  width:90px; 
+  width: auto; 
+  /*border: 1px solid red;*/
+    position: absolute;
+    
+    /*float: left;*/
+    left: 40px;
+    top: 150px;
+    margin: 0px;  
 }
 
 .averoil {
